--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,17 +8,11 @@ spring.mvc.cors.allowed-headers=*
 # ?? ??
 server.port=8080
 
-# ??
-# H2 ???? ??? DB ??
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Oracle DB ??
+spring.datasource.url=jdbc:oracle:thin:@dblab.dongduk.ac.kr:1521/orclpdb
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.username=s250105
+spring.datasource.password=103315
 
-# JPA ??
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-# H2 ?? ??
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
