--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,11 @@
 			<scope>system</scope>
 			<systemPath>${project.basedir}/libs/ojdbc11.jar</systemPath>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
