--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=s250105
 spring.datasource.password=103315
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 spring.servlet.multipart.max-file-size=10MB
