feat : 상품 판매 페이지 - 상품상세 페이지조회 구현

--- a/pom.xml
+++ b/pom.xml
@@ -86,8 +86,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version> <!-- 최신 안정 버전 -->
 				<configuration>
-					<source>17</source>
-					<target>17</target>
+					<source>21</source>
+					<target>21</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -95,7 +95,8 @@
 							<version>1.18.30</version>
 						</path>
 					</annotationProcessorPaths>
-				</configuration>
+                    <!--<compilerArgs>-enable-preview</compilerArgs>-->
+                </configuration>
 			</plugin>
 
 			<plugin>
