--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,18 +14,17 @@ spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.username=s250105
 spring.datasource.password=103315
 
-
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+
+spring.messages.encoding=UTF-8
+spring.messages.basename=ValidationMessages
